### Add dependencies in setup.py (HEAD -> refactoring)
>Thu, 18 Feb 2021 14:14:21 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change requirements to requirements.txt (origin/refactoring)
>Thu, 18 Feb 2021 13:49:27 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add licence in the header of each python file
>Thu, 18 Feb 2021 06:26:00 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Refactoring
>Thu, 18 Feb 2021 06:15:51 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### adding chirp mass function (origin/main, origin/HEAD, main)
>Thu, 7 Jan 2021 10:19:24 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### cleanup
>Fri, 18 Dec 2020 13:19:00 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### adding docs
>Fri, 18 Dec 2020 11:57:17 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### adding __init__.py
>Thu, 17 Dec 2020 13:43:52 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### adding source code to repo
>Thu, 17 Dec 2020 13:37:14 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Initial commit
>Thu, 17 Dec 2020 13:14:42 -0600

>Author: Tyson Littenberg (tyson.b.littenberg@gmail.com)

>Commiter: GitHub (noreply@github.com)



