@@ -5,9 +5,6 @@ include README
 include LICENCE
 include THIRD.txt
 
-# Include the configuration file
-recursive-include conf  *
-
 # Include dependencies
 include requirements*.txt
 
@@ -25,11 +22,6 @@ recursive-include tests/testsuites  *
 
 # Include scripts
 recursive-include scripts   *
-
-# Include main module
-include lisacattools/__init__.py
-include lisacattools/_version.py
-include lisacattools/logging.conf
 
 # Include tuto
 include tutorial/*.ipynb
