@@ -1,4 +1,14 @@
-### Add dependencies in setup.py (HEAD -> refactoring)
+### Add log configuration in the package during the distribution to avoid warnings (HEAD -> refactoring)
+>Fri, 26 Feb 2021 06:57:59 +0100
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Add dependencies in setup.py (origin/refactoring)
 >Thu, 18 Feb 2021 14:14:21 +0100
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Change requirements to requirements.txt (origin/refactoring)
+### Change requirements to requirements.txt
 >Thu, 18 Feb 2021 13:49:27 +0100
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
